Lab 3/compiling_error.txt
C:\Users\gcolm\Google Drive\School\UCD\Year 1\Semester 1\Computer Science\Computer Programming I\C Programmes\Lab 3\CompoundInterest.c: In function 'main':
C:\Users\gcolm\Google Drive\School\UCD\Year 1\Semester 1\Computer Science\Computer Programming I\C Programmes\Lab 3\CompoundInterest.c:20:20: error: called object is not a function or function pointer
     a = p*pow(1+(r/1000(12)), 12);
                    ^~~~
